--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="header-right">
           <div class="sq-box">
-            <img src="./car1.jpg" alt="" />
+            <img src="./car1.png" alt="" />
           </div>
         </div>
       </div>
