added the authentication page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           </li>
           <li><a href="Pages/aboutUs.html" style="--i: 2">About</a></li>
           <li><a href="Pages/contact.html" style="--i: 5">Contact</a></li>
+          <li>
+            <a href="Pages/loginSignup/index.html" style="--i: 5">Sign In</a>
+          </li>
         </ul>
       </div>
     </nav>
