--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Milage Tracker</title>
+    <title>Odo Tracker</title>
     <!-- ..................Custom Css Link................... -->
     <link rel="stylesheet" href="./style.css" />
     <!-- ..................FontAwesome Link................... -->
@@ -18,17 +18,17 @@
         <ul class="nav-link">
           <li><a href="/" style="--i: 1" class="active">Home</a></li>
           <li>
-            <a href="Pages/getMilageData.html" style="--i: 3">GetMilageData</a>
+            <a href="./Pages/getCardata/getCarData.html" style="--i: 3">GetCarData</a>
           </li>
           <li>
-            <a href="Pages/updateMilageData.html" style="--i: 4"
-              >UpdateMilageData</a
+            <a href="./Pages/updateCardata/updateCarData.html" style="--i: 4"
+              >UpdateCarData</a
             >
           </li>
-          <li><a href="Pages/aboutUs.html" style="--i: 2">About</a></li>
-          <li><a href="Pages/contact.html" style="--i: 5">Contact</a></li>
+          <li><a href="./Pages/about/aboutUs.html" style="--i: 2">About</a></li>
+          <li><a href="./Pages/contact/contact.html" style="--i: 5">Contact</a></li>
           <li>
-            <a href="Pages/loginSignup/index.html" style="--i: 5">Sign In</a>
+            <a href="./Pages/loginSignup/index.html" style="--i: 5">Sign In</a>
           </li>
         </ul>
       </div>
@@ -39,21 +39,21 @@
     <header>
       <div class="container header-container">
         <div class="header-left">
-          <h1>Revolutionizing Mileage Tracking</h1>
+          <h1>Revolutionizing Car Tracking</h1>
           <h3>Let's Track!</h3>
           <p>
-            "Effortlessly monitor your vehicle's mileage with our intuitive
+            "Effortlessly monitor your vehicle's Car with our intuitive
             platform. Track distances traveled, maintain accurate records, and
             optimize maintenance schedules seamlessly. Simplify expense
             reporting and ensure compliance with ease. Trust our user-friendly
-            interface to manage mileage efficiently, helping you stay organized
+            interface to manage Car efficiently, helping you stay organized
             and informed every mile of the way."
           </p>
-          <a href="/Pages/getMilageData.html" class="btn">Track</a>
+          <a href="./Pages/getCardata/getCarData.html" class="btn">Track</a>
         </div>
         <div class="header-right">
           <div class="sq-box">
-            <img src="./car1.png" alt="" />
+            <img src="./assets/car1.png" alt="Car Image" />
           </div>
         </div>
       </div>
